pre-grpc/setup/istio-manifests/secure/frontend-gateway.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: coolretailer-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
 
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coolretailer-ingress
spec:
  hosts:
  - "*"
  gateways:
  - coolretailer-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: coolretailer-app
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: coolretailer-ui
        port:
          number: 80
